[gd_scene load_steps=15 format=3 uid="uid://drw5ljx4fsbdx"]

[ext_resource type="Script" path="res://settings_page.gd" id="1_2wayq"]
[ext_resource type="Texture2D" uid="uid://copd4i4xqjiwv" path="res://resources/svg/settings_bg.svg" id="2_35iie"]
[ext_resource type="Texture2D" uid="uid://ddp7ccypqeptl" path="res://resources/svg/cross.png" id="3_foelt"]
[ext_resource type="Texture2D" uid="uid://bjv66ma4qhqm" path="res://resources/svg/cross_hover.png" id="4_a2agt"]
[ext_resource type="Texture2D" uid="uid://c8nlcgd4sgeim" path="res://resources/svg/Button/Rect/Fill/Default.svg" id="5_fhuid"]
[ext_resource type="FontFile" uid="uid://c2iu4eowycoxp" path="res://resources/font/Bungee/Bungee-Regular.ttf" id="6_wwy6w"]
[ext_resource type="Texture2D" uid="uid://uqx6thmo3fgi" path="res://resources/svg/Bar/slider.svg" id="7_7urlr"]
[ext_resource type="Texture2D" uid="uid://d0qp1ohmkdao2" path="res://resources/svg/Bar/Background.svg" id="8_65s1p"]
[ext_resource type="Texture2D" uid="uid://do6w35im262pi" path="res://resources/svg/Bar/Line.png" id="8_x4akh"]
[ext_resource type="Texture2D" uid="uid://ckjs7k7m0bu64" path="res://resources/svg/github.png" id="10_2sfd5"]
[ext_resource type="Texture2D" uid="uid://dnv1ofnbolvyt" path="res://resources/svg/github_hover.png" id="11_48ckv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dkuus"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
texture = ExtResource("8_65s1p")
expand_margin_left = 8.0
expand_margin_top = 5.0
expand_margin_right = 4.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_govi0"]
texture = ExtResource("8_x4akh")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gv0q6"]
texture = ExtResource("8_x4akh")

[node name="SettingsPage" type="Node2D"]
script = ExtResource("1_2wayq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackgroundControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BackgroundControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_35iie")

[node name="HeadBarControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -1714.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeadBar" type="ColorRect" parent="CanvasLayer/HeadBarControl"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0
grow_horizontal = 2
color = Color(0.447059, 0.34902, 0.321569, 1)

[node name="ClosesButtonControl" type="Control" parent="CanvasLayer/HeadBarControl/HeadBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CloseButton" type="TextureButton" parent="CanvasLayer/HeadBarControl/HeadBar/ClosesButtonControl"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_top = 20.0
offset_right = -160.0
offset_bottom = 70.0
grow_horizontal = 0
scale = Vector2(3, 3)
texture_normal = ExtResource("3_foelt")
texture_pressed = ExtResource("4_a2agt")

[node name="AudioButtonControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="AudioButton" type="TextureRect" parent="CanvasLayer/AudioButtonControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -13.525
anchor_right = 0.5
anchor_bottom = -13.525
offset_left = -197.0
offset_top = -84.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
texture = ExtResource("5_fhuid")

[node name="Audio Text" type="Label" parent="CanvasLayer/AudioButtonControl/AudioButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.423
anchor_right = 0.5
anchor_bottom = 0.423
offset_left = -55.0
offset_top = -20.532
offset_right = 3.0
offset_bottom = 2.468
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.643137, 0.572549, 0.372549, 1)
theme_override_fonts/font = ExtResource("6_wwy6w")
text = "AUDIO"

[node name="MusicSliderControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="Music Slider" type="HSlider" parent="CanvasLayer/MusicSliderControl"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.637
anchor_top = -6.9
anchor_right = -0.637
anchor_bottom = -6.9
offset_left = -248.52
offset_top = -43.0
offset_right = 248.48
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("7_7urlr")
theme_override_icons/grabber_highlight = ExtResource("7_7urlr")
theme_override_icons/grabber_disabled = ExtResource("7_7urlr")
theme_override_styles/slider = SubResource("StyleBoxTexture_dkuus")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_govi0")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_gv0q6")
max_value = 1.0
step = 0.001
value = 1.0

[node name="GithubButtonControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GithubButton" type="TextureButton" parent="CanvasLayer/GithubButtonControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = 584.0
offset_right = -31.0
offset_bottom = 668.0
grow_vertical = 2
scale = Vector2(3, 3)
texture_normal = ExtResource("10_2sfd5")
texture_pressed = ExtResource("11_48ckv")

[node name="MusicTextControl" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/MusicTextControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = -2.65
anchor_top = -8.975
anchor_right = -2.65
anchor_bottom = -8.975
offset_left = -168.0
offset_top = -46.0
offset_right = -46.0
offset_bottom = 1.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.298039, 0.239216, 0.219608, 1)
theme_override_fonts/font = ExtResource("6_wwy6w")
theme_override_font_sizes/font_size = 35
text = "Music"

[connection signal="pressed" from="CanvasLayer/HeadBarControl/HeadBar/ClosesButtonControl/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="value_changed" from="CanvasLayer/MusicSliderControl/Music Slider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/GithubButtonControl/GithubButton" to="." method="_on_github_button_pressed"]
